...
        testID="input-2fa-code"
        autoCapitalize="none"
        keyboardType={useRecovery ? 'default' : 'number-pad'}
        autoComplete="one-time-code"
      />
      <FormError message={formError} />
      <Button testID="btn-2fa-submit" label={t('Continue')} loading={formState.isSubmitting} onPress={onSubmit} />
      <Pressable
        onPress={() => {
          setUseRecovery(!useRecovery);
          reset({ code: '' });
        }}
      >
...
